--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: any
   http: any
+  flutter_rating_bar: any
 
 
   # The following adds the Cupertino Icons font to your application.
